// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TagWorkbench snapshots > keeps the submission code panel on a single scroll contract 1`] = `
".submission-utility-grid .context-panel-shell {
  height: clamp(320px, 38vh, 520px);
  min-height: 320px;
  max-height: 520px;
  overflow: auto;
}

.submission-utility-grid .context-panel-code .submission-code,
.submission-utility-grid .context-panel-code .python-code,
.submission-utility-grid .context-panel-statement .problem-description {
  min-height: 100%;
  max-height: none;
  overflow: visible !important;
}"
`;

exports[`TagWorkbench snapshots > keeps the template control plane header wrapping contract 1`] = `
".template-plane-header > div,
.template-plane-header-actions,
.plane-complexity {
  min-width: 0;
}

.template-plane-header h2 {
  margin: 0;
  font-size: 24px;
  line-height: 1.05;
}"
`;

exports[`TagWorkbench snapshots > matches the submission history pane 1`] = `
"<section class="sidebar">
<div class="submission-sidebar-header">
<div class="sidebar-context-header">
<p class="eyebrow">Submission Inbox</p>
<h2>Accepted runs</h2>
<p class="sidebar-context-copy">Search recent problems, review attempts, and jump into taxonomy tagging without leaving the workbench.</p>
</div>
<div class="submission-kpi-grid">
<article>
<strong>3</strong>
<span>Total</span>
</article>
<article>
<strong>3</strong>
<span>AC</span>
</article>
<article>
<strong>1</strong>
<span>Tagged</span>
</article>
<article>
<strong>1</strong>
<span>Benched</span>
</article>
</div>
</div>
<div class="filters">
<input class="flex h-9 w-full rounded-md border border-input bg-card px-3 py-1 text-sm text-foreground shadow-sm transition-colors placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50" placeholder="Search problems..." aria-label="Search submissions" value=""/>
<label class="submission-filter">
<span class="sr-only">Submission filter</span>
<select>
<option value="all" selected="">All</option>
<option value="tagged">Tagged</option>
<option value="untagged">Untagged</option>
<option value="benchmarked">Benchmarked</option>
</select>
</label>
</div>
<div class="submission-list">
<div class="submission-week-list">
<section class="submission-week">
<button class="submission-week-header " type="button" aria-expanded="true" aria-label="Collapse day Jun 22, 2026">
<h3>Jun 22, 2026</h3>
<span>1</span>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-check h-3.5 w-3.5 shrink-0 text-emerald-600" aria-hidden="true" title="All submissions for this day are resolved or opted out">
<circle cx="12" cy="12" r="10">
</circle>
<path d="m9 12 2 2 4-4">
</path>
</svg>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right ml-auto h-3.5 w-3.5 shrink-0 text-muted-foreground transition-transform duration-200 ease-out rotate-90" aria-hidden="true">
<path d="m9 18 6-6-6-6">
</path>
</svg>
</button>
<div class="grid overflow-hidden transition-[grid-template-rows,opacity] duration-200 ease-out opacity-100" style="grid-template-rows:1fr" aria-hidden="false">
<div class="min-h-0">
<div class="submission-problem-list">
<section class="submission-problem-group active">
<button type="button" class="submission-problem-header">
<span class="submission-title">Shortest Path in Binary Matrix</span>
<span class="submission-problem-count">4 tag</span>
</button>
<div class="submission-attempt-list">
<button type="button" class="submission-attempt taxonomy-complete active">
<span class="submission-meta">Medium · python3</span>
<div class="submission-attempt-footer">
<span class="tag-preview">4 tags</span>
<span class="submission-optout ">Jun 22, 06:27 PM</span>
</div>
</button>
<button type="button" class="submission-attempt taxonomy-none">
<span class="submission-meta">Medium · python3</span>
<div class="submission-attempt-footer">
<span class="tag-preview">0 tags</span>
<span class="submission-optout active">opted out</span>
</div>
</button>
</div>
</section>
</div>
</div>
</div>
</section>
<section class="submission-week">
<button class="submission-week-header collapsed" type="button" aria-expanded="false" aria-label="Expand day Jun 21, 2026">
<h3>Jun 21, 2026</h3>
<span>1</span>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-alert h-3.5 w-3.5 shrink-0 text-amber-600" aria-hidden="true" title="Contains submissions that are not opted out and still unresolved">
<circle cx="12" cy="12" r="10">
</circle>
<line x1="12" x2="12" y1="8" y2="12">
</line>
<line x1="12" x2="12.01" y1="16" y2="16">
</line>
</svg>
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-chevron-right ml-auto h-3.5 w-3.5 shrink-0 text-muted-foreground transition-transform duration-200 ease-out rotate-0" aria-hidden="true">
<path d="m9 18 6-6-6-6">
</path>
</svg>
</button>
<div class="grid overflow-hidden transition-[grid-template-rows,opacity] duration-200 ease-out opacity-0" style="grid-template-rows:0fr" aria-hidden="true">
<div class="min-h-0">
<div class="submission-problem-list">
<section class="submission-problem-group">
<button type="button" class="submission-problem-header">
<span class="submission-title">Open the Lock</span>
<span class="submission-problem-count">untagged</span>
</button>
<div class="submission-attempt-list">
<button type="button" class="submission-attempt taxonomy-none">
<span class="submission-meta">Medium · python3</span>
<div class="submission-attempt-footer">
<span class="tag-preview">0 tags</span>
<span class="submission-optout ">Jun 21, 02:00 PM</span>
</div>
</button>
</div>
</section>
</div>
</div>
</div>
</section>
</div>
</div>
</section>"
`;

exports[`TagWorkbench snapshots > matches the tag workbench pane 1`] = `
"<section class="detail">
<div class="detail-header detail-hero">
<div class="detail-title-block">
<div class="detail-status-row">
<span class="submission-difficulty difficulty-medium">Medium</span>
<span class="submission-status-pill">Accepted</span>
<span class="submission-header-meta">python3</span>
<span class="submission-header-meta">Jun 22, 06:27 PM</span>
<span class="submission-header-meta">2 attempts</span>
<span class="taxonomy-state-pill taxonomy-complete">In taxonomy</span>
</div>
<h2>Shortest Path in Binary Matrix</h2>
<p class="detail-slug">/shortest-path-in-binary-matrix</p>
</div>
<div class="complexity detail-metric-grid">
<span>Time O(m * n)</span>
<span>Space O(m + n)</span>
<span>4 selected tags</span>
<span>Benchmarked 2</span>
</div>
</div>
<div class="detail-control-row">
<label class="template-optout-control detail-optout-control">
<input type="checkbox"/>
<span>Opt out from templating</span>
</label>
</div>
<section class="template-tag-stage surface-card">
<div class="section-title-row section-title-row-spread">
<h3>Algorithm Template Tags</h3>
<span class="section-meta-pill">4 selected</span>
</div>
<div class="selected-tags">
<button class="selected-tag dimension-template">
<span>graph-bfs-dfs</span>
<small>Remove</small>
</button>
<button class="selected-tag dimension-template">
<span>grid-bfs-unweighted-shortest-path</span>
<small>Remove</small>
</button>
<button class="selected-tag dimension-data_structure">
<span>ds-grid</span>
<small>Remove</small>
</button>
<button class="selected-tag dimension-data_structure">
<span>ds-queue</span>
<small>Remove</small>
</button>
</div>
</section>
<div class="benchmark-status surface-card surface-card-inline">
<span>Benchmark model: openai/gpt-4.1-mini</span>
</div>
<div class="taxonomy-layout taxonomy-surface-stack">
<section class="tag-group dimension-template">
<div class="tag-group-header">
<div>
<h3>Linear state and hashing</h3>
<small>1 templates</small>
</div>
</div>
<div class="tag-group-body">
<div class="tag-group-actions">
<button class="exclude-group-button" type="button" aria-pressed="false" aria-label="Exclude Linear state and hashing from LLM benchmark" title="Exclude this group from LLM benchmark">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-off" aria-hidden="true">
<path d="m2 2 20 20">
</path>
<path d="M8.35 2.69A10 10 0 0 1 21.3 15.65">
</path>
<path d="M19.08 19.08A10 10 0 1 1 4.92 4.92">
</path>
</svg>
<span class="sr-only">Exclude from benchmark</span>
</button>
</div>
<div class="tag-options">
<button class="tag-option dimension-template" title="Lookup or count values with a hash map.">
<div class="tag-option-top-row">
<div class="tag-option-title-stack">
<span class="tag-option-label">Hash map lookup</span>
<small class="tag-option-key">hash-map-lookup</small>
</div>
<div class="tag-option-controls">
</div>
</div>
<div class="tag-option-footer">
<strong class="source-badge source-seeded">seeded</strong>
<em>documented</em>
</div>
</button>
<button class="add-template-card" type="button">
<span>+</span>
<strong>Generate template</strong>
<small>Linear state and hashing</small>
</button>
</div>
</div>
</section>
<section class="tag-group dimension-template">
<div class="tag-group-header">
<div>
<h3>Structures and traversal</h3>
<small>2 templates</small>
</div>
</div>
<div class="tag-group-body">
<div class="tag-group-actions">
<button class="exclude-group-button" type="button" aria-pressed="false" aria-label="Exclude Structures and traversal from LLM benchmark" title="Exclude this group from LLM benchmark">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-off" aria-hidden="true">
<path d="m2 2 20 20">
</path>
<path d="M8.35 2.69A10 10 0 0 1 21.3 15.65">
</path>
<path d="M19.08 19.08A10 10 0 1 1 4.92 4.92">
</path>
</svg>
<span class="sr-only">Exclude from benchmark</span>
</button>
</div>
<div class="tag-options">
<button class="tag-option dimension-template selected focused score-high" title="Explore graph or grid states while tracking visited nodes.">
<div class="tag-option-top-row">
<div class="tag-option-title-stack">
<span class="tag-option-label">Graph BFS/DFS</span>
<small class="tag-option-key">graph-bfs-dfs</small>
</div>
<div class="tag-option-controls">
<strong class="benchmark-score benchmark-score-high">85</strong>
</div>
</div>
<div class="tag-option-footer">
<strong class="source-badge source-seeded">seeded</strong>
<em>documented</em>
</div>
</button>
<button class="tag-option dimension-template custom-template selected score-high" title="Specialized BFS for shortest paths on a grid with uniform edge weights.">
<div class="tag-option-top-row">
<div class="tag-option-title-stack">
<span class="tag-option-label">Grid BFS for unweighted shortest path</span>
<small class="tag-option-key">grid-bfs-unweighted-shortest-path</small>
</div>
<div class="tag-option-controls">
<span class="delete-template-button" role="button" tabindex="0" aria-label="Delete Grid BFS for unweighted shortest path">×</span>
<strong class="benchmark-score benchmark-score-high">100</strong>
</div>
</div>
<div class="tag-option-footer">
<strong class="source-badge source-llm_generated">llm generated</strong>
<em>documented</em>
</div>
</button>
<button class="add-template-card" type="button">
<span>+</span>
<strong>Generate template</strong>
<small>Structures and traversal</small>
</button>
</div>
</div>
</section>
<section class="tag-group dimension-template">
<div class="tag-group-header">
<div>
<h3>Recursion, optimization, and design</h3>
<small>1 templates</small>
</div>
</div>
<div class="tag-group-body">
<div class="tag-group-actions">
<button class="exclude-group-button" type="button" aria-pressed="false" aria-label="Exclude Recursion, optimization, and design from LLM benchmark" title="Exclude this group from LLM benchmark">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-off" aria-hidden="true">
<path d="m2 2 20 20">
</path>
<path d="M8.35 2.69A10 10 0 0 1 21.3 15.65">
</path>
<path d="M19.08 19.08A10 10 0 1 1 4.92 4.92">
</path>
</svg>
<span class="sr-only">Exclude from benchmark</span>
</button>
</div>
<div class="tag-options">
<button class="tag-option dimension-template" title="Recursive search with choose-explore-unchoose.">
<div class="tag-option-top-row">
<div class="tag-option-title-stack">
<span class="tag-option-label">Backtracking</span>
<small class="tag-option-key">backtracking</small>
</div>
<div class="tag-option-controls">
</div>
</div>
<div class="tag-option-footer">
<strong class="source-badge source-seeded">seeded</strong>
<em>documented</em>
</div>
</button>
<button class="add-template-card" type="button">
<span>+</span>
<strong>Generate template</strong>
<small>Recursion, optimization, and design</small>
</button>
</div>
</div>
</section>
<section class="tag-group dimension-data_structure">
<div class="tag-group-header">
<div>
<h3>data structure</h3>
<small>2 templates</small>
</div>
</div>
<div class="tag-group-body">
<div class="tag-options">
<button class="tag-option dimension-data_structure selected" title="Problems modeled on a 2D board.">
<div class="tag-option-top-row">
<div class="tag-option-title-stack">
<span class="tag-option-label">Grid / Matrix</span>
<small class="tag-option-key">ds-grid</small>
</div>
<div class="tag-option-controls">
</div>
</div>
<div class="tag-option-footer">
<strong class="source-badge source-seeded">seeded</strong>
</div>
</button>
<button class="tag-option dimension-data_structure selected" title="FIFO exploration or deque-based transitions.">
<div class="tag-option-top-row">
<div class="tag-option-title-stack">
<span class="tag-option-label">Queue / Deque</span>
<small class="tag-option-key">ds-queue</small>
</div>
<div class="tag-option-controls">
</div>
</div>
<div class="tag-option-footer">
<strong class="source-badge source-seeded">seeded</strong>
</div>
</button>
</div>
</div>
</section>
</div>
<div class="submission-utility-grid grid grid-cols-1 items-start gap-3 px-3.5 pb-2">
<section class="surface-card submission-thought-card submission-thought-card-compact max-w-none">
<div class="section-title-row section-title-row-spread">
<div>
<h3>Submission Note</h3>
<p class="section-copy">Record why this accepted version worked or what you want to remember.</p>
</div>
<button class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 hover:brightness-95 h-9 px-4 py-2 bg-accent text-accent-foreground primary" type="button">Save thought</button>
</div>
<textarea class="flex min-h-24 w-full rounded-md border border-input bg-card px-3 py-2 text-sm text-foreground shadow-sm transition-colors placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50" placeholder="What pattern mattered here? What was the key invariant? What should future-you remember?" rows="4">Level-order BFS guarantees the first time we reach the target is the shortest path.</textarea>
</section>
<section class="submission-context-card m-0 border-0 bg-transparent">
<div class="context-card-header">
<div>
<p class="eyebrow">Submission Context</p>
<h3>Code and problem source</h3>
</div>
<span>python3</span>
</div>
<div class="context-tab-strip flex min-h-11 items-stretch gap-1 overflow-x-auto border-b border-black/10 bg-[#f6f2ea]" role="tablist" aria-label="Submission context">
<button type="button" role="tab" class="context-tab active" aria-selected="true">Submission Code</button>
<button type="button" role="tab" class="context-tab " aria-selected="false">Problem Statement</button>
</div>
<div class="context-panel-shell overflow-auto context-panel-code">
<pre class="submission-code python-code" data-language="python" data-custom-style="{&quot;margin&quot;:0,&quot;minHeight&quot;:&quot;100%&quot;}" data-pre-tag="div">from collections import deque def shortestPathBinaryMatrix(grid): queue = deque([(0, 0, 1)]) seen = {(0, 0)} return 1</pre>
</div>
</section>
</div>
<div class="actions surface-card surface-card-inline sticky-action-bar">
<button class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 hover:brightness-95 h-9 px-4 py-2 bg-accent text-accent-foreground primary">Save submission</button>
<button class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 bg-primary text-primary-foreground hover:brightness-95 h-9 px-4 py-2">Rerun benchmark</button>
<button class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 bg-primary text-primary-foreground hover:brightness-95 h-9 px-4 py-2">Clear tags</button>
</div>
</section>"
`;

exports[`TagWorkbench snapshots > matches the template control plane 1`] = `
"<aside class="template-plane template-plane-inspector animate-in slide-in-from-right-3 fade-in-0 duration-200 w-80 bg-[#f6f2ea]" role="complementary" aria-labelledby="template-plane-title">
<div class="template-plane-header relative flex min-h-[86px] flex-col gap-3 px-3 py-2.5 pr-12">
<div class="min-w-0">
<p class="eyebrow">Template Control Plane</p>
<h2 id="template-plane-title" class="text-sm font-semibold leading-tight">Graph BFS/DFS</h2>
<div class="template-identity flex min-w-0 flex-wrap items-center gap-2">
<p class="min-w-0 break-words">graph-bfs-dfs</p>
<strong class="source-badge source-seeded">seeded</strong>
</div>
</div>
<div class="plane-complexity flex min-w-0 flex-wrap items-start gap-2">
<span>Time O(m * n)</span>
<span>Space O(m + n)</span>
<span class="plane-score high">85</span>
</div>
<div class="template-plane-header-actions absolute right-3 top-2.5">
<button class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 hover:bg-muted hover:text-foreground template-plane-close h-8 w-8 shrink-0 rounded-full" type="button" aria-label="Close template drawer">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-x h-4 w-4" aria-hidden="true">
<path d="M18 6 6 18">
</path>
<path d="m6 6 12 12">
</path>
</svg>
</button>
</div>
</div>
<p class="template-description">Explore graph or grid states while tracking visited nodes.</p>
<div class="template-plane-grid">
<section class="template-card wide benchmark-card">
<h3>LLM Benchmark</h3>
<p>Score 85/100 · Confidence 71/100</p>
<p>BFS over a grid is a graph traversal pattern with shortest-path semantics.</p>
<ul>
<li>Uses BFS traversal</li>
<li>Tracks visited nodes</li>
<li>Explores neighbors level-by-level</li>
</ul>
</section>
<section class="template-card">
<h3>When To Use</h3>
<ul>
<li>Need connected components, reachability, or shortest unweighted expansions.</li>
</ul>
</section>
<section class="template-card">
<h3>When Not To Use</h3>
<ul>
<li>Dependencies form a DAG and require ordering.</li>
<li>Need dynamic connectivity under unions.</li>
</ul>
</section>
<section class="template-card compact">
<h3>Signals</h3>
<ul>
<li>graph</li>
<li>grid</li>
<li>visited</li>
<li>component</li>
</ul>
</section>
<section class="template-card">
<h3>Invariants</h3>
<ul>
<li>Visited nodes are never processed twice.</li>
<li>Frontier contains discovered but unresolved nodes.</li>
</ul>
</section>
<section class="template-card wide">
<h3>Pseudocode</h3>
<pre>frontier = [start]
visited = {start}
while frontier: node = pop frontier</pre>
</section>
<section class="template-card compact">
<h3>Data Structures</h3>
<ul>
<li>Queue / Deque</li>
<li>Graph</li>
</ul>
</section>
<section class="template-card compact">
<h3>Classic Problems</h3>
<ul>
<li>Number of Islands</li>
<li>Shortest Path in Binary Matrix</li>
</ul>
</section>
<section class="template-card">
<h3>Similar Templates</h3>
<div class="related-tags">
<span>grid-bfs-unweighted-shortest-path</span>
</div>
</section>
</div>
</aside>"
`;

exports[`TagWorkbench snapshots > matches the template control plane with a long header and no benchmark score 1`] = `
"<aside class="template-plane template-plane-inspector animate-in slide-in-from-right-3 fade-in-0 duration-200 w-80 bg-[#f6f2ea]" role="complementary" aria-labelledby="template-plane-title">
<div class="template-plane-header relative flex min-h-[86px] flex-col gap-3 px-3 py-2.5 pr-12">
<div class="min-w-0">
<p class="eyebrow">Template Control Plane</p>
<h2 id="template-plane-title" class="text-sm font-semibold leading-tight">Hash map grouping</h2>
<div class="template-identity flex min-w-0 flex-wrap items-center gap-2">
<p class="min-w-0 break-words">hash-map-grouping</p>
<strong class="source-badge source-seeded">seeded</strong>
</div>
</div>
<div class="plane-complexity flex min-w-0 flex-wrap items-start gap-2">
<span>Time O(n * normalize_cost)</span>
<span>Space O(n)</span>
</div>
<div class="template-plane-header-actions absolute right-3 top-2.5">
<button class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&amp;_svg]:pointer-events-none [&amp;_svg]:size-4 [&amp;_svg]:shrink-0 hover:bg-muted hover:text-foreground template-plane-close h-8 w-8 shrink-0 rounded-full" type="button" aria-label="Close template drawer">
<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-x h-4 w-4" aria-hidden="true">
<path d="M18 6 6 18">
</path>
<path d="m6 6 12 12">
</path>
</svg>
</button>
</div>
</div>
<p class="template-description">Map each item to a canonical signature and group equal signatures together.</p>
<div class="template-plane-grid">
<section class="template-card">
<h3>When To Use</h3>
<ul>
<li>Objects are equivalent after normalization.</li>
<li>Need bucket, group, or aggregate items by a derived key.</li>
</ul>
</section>
<section class="template-card">
<h3>When Not To Use</h3>
<ul>
<li>Need preserve exact order as the primary constraint.</li>
<li>Need range or neighbor queries.</li>
</ul>
</section>
<section class="template-card compact">
<h3>Signals</h3>
<ul>
<li>group by</li>
<li>signature</li>
<li>frequency</li>
<li>bucket</li>
<li>canonical key</li>
</ul>
</section>
<section class="template-card">
<h3>Invariants</h3>
<ul>
<li>Equivalent inputs map to the same key.</li>
<li>The grouped value contains all items for that key.</li>
</ul>
</section>
<section class="template-card wide">
<h3>Pseudocode</h3>
<pre>groups = map()
for item in items: key = normalize(item) groups[key].append_or_count(item)</pre>
</section>
<section class="template-card compact">
<h3>Data Structures</h3>
<ul>
<li>hash-map</li>
<li>counter</li>
</ul>
</section>
<section class="template-card compact">
<h3>Classic Problems</h3>
<ul>
<li>49. Group Anagrams</li>
<li>242. Valid Anagram</li>
</ul>
</section>
</div>
</aside>"
`;
